--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Nurture And Suture is a premier Surgical and Pediatric Clinic in Vile Parle, Mumbai. Whether you need consultation, dressing, or vaccination, our expert doctors are committed to providing you with the highest quality care."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Nurture And Suture</title>
+    <title>Nurture And Suture - Surgical & Paediatric Clinic</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   </head>
   <body>
